# sam-bedrock-kb-aurora-rag

./: README.md  pyproject.toml  samconfig.toml  template.yaml
function/: index.py
