[tool.poetry]
name = "sam-bedrock-kb-aurora-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.113"
black = "^24.4.2"
isort = "^5.13.2"
pyproject-flake8 = "^7.0.0"
mypy = "^1.10.0"
pyproject-autoflake = "^1.0.2"
cfnresponse = "^1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
